# online-store

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0173edfe63f5_ad_user_and_profile.py  0d64884b8747_ad_order_product_association_table.py  0ed68df4fd68_create_user_and_profile_table.py  1dbfaa899437_ad_cascade_delete_to_user.py  2bb5fbc9ae6e_ad_profile.py  350206fb87d2_ad_sqlalchemybaseusertable.py  60a71a231e65_create_products_table.py  658f2a1a3cee_ad_profile_and_user_models.py  872b5a669506_create_order_table.py  a1738095c75f_ad_profile_and_user.py  b9205318112d_create_products_table.py  c8042065281a_ad_profile_and_user_models_relationship.py  eb2bf01f9b4b_ad_updates.py  f3130bd66b8f_ad_nullable_to_profiles.py  f908fbcbaf92_create_orders_table.py
api_v1/: __init__.py
api_v1/orders/: crud.py  dependencies.py  schemas.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
api_v1/profiles/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/: auth.py  crud.py  dependencies.py  manager.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  order.py  order_product_association.py  product.py  profile.py  user.py
tests/: test_products.py
