[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Pavel Ryaguzov <pashajobber@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
email-validator = "^2.1.0.post1"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.2.1"
black = "^24.2.0"
asyncpg = "^0.29.0"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
